--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.3"
+    "@astrojs/solid-js": "^5.0.4",
+    "@tailwindcss/vite": "^4.0.2",
+    "astro": "^5.2.3",
+    "solid-js": "^1.9.4",
+    "tailwindcss": "^4.0.2"
   }
 }
