--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "^5.2.3",
     "solid-js": "^1.9.4",
     "tailwindcss": "^4.0.2"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.2.2"
   }
 }
